<resources>
    <string name="app_name">Cybersecurity Lab</string>
</resources>
